tests/cases/ffi/errors/extern-varargs-nonextern.ari
fn log(format: string, ...) -> i64 {
  return 0;
}
